; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-path.c_test_path_directorynotempty.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-path.c_test_path_directorynotempty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [34 x i8] c"/tmp/test-path_directorynotempty/\00", align 1
@F_OK = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [28 x i8] c"path-directorynotempty.path\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"test_file\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @test_path_directorynotempty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_path_directorynotempty(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  store i32* null, i32** %4, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = ptrtoint i32* %5 to i32
  %7 = call i32 @assert_se(i32 %6)
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* @F_OK, align 4
  %10 = call i64 @access(i8* %8, i32 %9)
  %11 = icmp slt i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert_se(i32 %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call i64 @manager_load_startable_unit_or_warn(i32* %14, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32* null, i32** %4)
  %16 = icmp sge i64 %15, 0
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert_se(i32 %17)
  %19 = load i32*, i32** %4, align 8
  %20 = call i64 @unit_start(i32* %19)
  %21 = icmp sge i64 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert_se(i32 %22)
  %24 = load i8*, i8** %3, align 8
  %25 = load i32, i32* @F_OK, align 4
  %26 = call i64 @access(i8* %24, i32 %25)
  %27 = icmp slt i64 %26, 0
  %28 = zext i1 %27 to i32
  %29 = call i32 @assert_se(i32 %28)
  %30 = load i8*, i8** %3, align 8
  %31 = call i64 @mkdir_p(i8* %30, i32 493)
  %32 = icmp sge i64 %31, 0
  %33 = zext i1 %32 to i32
  %34 = call i32 @assert_se(i32 %33)
  %35 = load i8*, i8** %3, align 8
  %36 = call i32 @strjoina(i8* %35, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  %37 = call i64 @touch(i32 %36)
  %38 = icmp sge i64 %37, 0
  %39 = zext i1 %38 to i32
  %40 = call i32 @assert_se(i32 %39)
  %41 = load i32*, i32** %2, align 8
  %42 = load i32*, i32** %4, align 8
  %43 = load i8*, i8** %3, align 8
  %44 = call i32 @check_stop_unlink(i32* %41, i32* %42, i8* %43, i32* null)
  ret void
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i64 @access(i8*, i32) #1

declare dso_local i64 @manager_load_startable_unit_or_warn(i32*, i8*, i32*, i32**) #1

declare dso_local i64 @unit_start(i32*) #1

declare dso_local i64 @mkdir_p(i8*, i32) #1

declare dso_local i64 @touch(i32) #1

declare dso_local i32 @strjoina(i8*, i8*) #1

declare dso_local i32 @check_stop_unlink(i32*, i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
